--- a/indeks.html
+++ b/indeks.html
@@ -11,6 +11,8 @@
   <link href="css/article.css" rel="stylesheet">
   <link href="css/section.css" rel="stylesheet">
   <link href="css/table.css" rel="stylesheet">
+  <link href="css/contact.css" rel="stylesheet">
+  <link href="css/footer.css" rel="stylesheet">
   <script defer src="js/script.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +23,7 @@
   <header class="header">KILKA SŁÓW O MNIE</header>
   <nav class="navigation">
     <ul class="navigation__list">
-      <li class="navigation__item"><a class="navigation__link" href="#aboutMe">Ogólnie o mnie</a></li>
+      <li class="navigation__item"><a class="navigation__link" href="#aboutMe">O mnie</a></li>
       <li class="navigation__item"><a class="navigation__link" href="#interested">Zainteresowania</a></li>
       <li class="navigation__item"><a class="navigation__link" href="#bee">Pszczelarstwo</a></li>
       <li class="navigation__item"><a class="navigation__link" href="#paragliding">Paralotniarstwo</a></li>
@@ -30,7 +32,7 @@
   </nav>
   <button class="button js-button">Włącz <span class="button__text">ciemny</span> motyw</button>
   <h1 class="title">Ryszard Froń</h1>
-  <a href="https://freeimage.host/i/pcpTle"><img class="main__image" src="https://iili.io/pcpTle.md.jpg" alt="Zdjęcie - Ryszard Froń"></a>
+  <img class="main__image" src="images/ryszardFron.jpg" alt="Zdjęcie - Ryszard Froń"></a>
   <article class="article">
     <h2 id="aboutMe" class="article__heading">OGÓLNIE O MNIE</h2>
     <p class="article__paragraph">
@@ -43,8 +45,7 @@
     <hr>
     <p class="article__paragraph">
       W życiu poza pracą należy mieć <span class="article__span">zainteresowania</span>, co
-      bezsprzecznie
-      wiąże się z czasem na ich realizację.
+      bezsprzecznie wiąże się z czasem na ich realizację.
     </p>
   </article>
   <article class="article">
@@ -69,7 +70,7 @@
       potrafią się do nich dostosować. I pomimo szerokiej wiedzy o ich funkcjonowaniu potrafią
       zaskoczyć najbardziej doświadczonych pszczelarzy.
     </p>
-    <a href="https://freeimage.host/i/pcp5Rj"><img class="section__image" src="https://iili.io/pcp5Rj.md.jpg" alt="Moja pasieka"></a>
+   <img class="section__image" src="images/pasiekaJ16.jpg" alt="Moja pasieka"></a>
     <div class="tableContainer">
       <h4 class="tableContainer__title">Pszczoły miodne hodowane w Polsce</h4>
       <table class="table">
@@ -127,7 +128,7 @@
         o mojej przygodzie z paralotniarstwem (otwiera się w nowej karcie)</a>
     </P>
     <p class="section__paragraph">
-      <a class="section__download" href="https://freeimage.host/i/pcpxi7" download="https://iili.io/pcpxi7.md.jpg">Ewolucja
+      <a class="section__download" href="images/ewolucjaPara.jpg" download>Ewolucja
         paralotniarza</a>😎
     </p>
   </section>
