--- a/indeks.html
+++ b/indeks.html
@@ -7,7 +7,9 @@
   <title>Ryszard Froń - O mnie</title>
   <link rel="icon" href="images/J16.png">
   <meta property="og:image" content="images/share.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/navigation.css" rel="stylesheet">
   <link href="css/article.css" rel="stylesheet">
@@ -24,13 +26,13 @@
 <body class="body">
   <header class="header">KILKA SŁÓW O MNIE</header>
   <nav class="navigation">
-    <ul class="navigation__list">
-      <li class="navigation__item"><a class="navigation__link" href="#aboutMe">O mnie</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="#interested">Zainteresowania</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="#bee">Pszczelarstwo</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="#paragliding">Paralotniarstwo</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="#contact">Kontakt</a></li>
-    </ul>
+
+    <a class="navigation__link" href="#aboutMe">O mnie</a>
+    <a class="navigation__link" href="#interested">Zainteresowania</a>
+    <a class="navigation__link" href="#bee">Pszczelarstwo</a>
+    <a class="navigation__link" href="#paragliding">Paralotniarstwo</a>
+    <a class="navigation__link" href="#contact">Kontakt</a>
+
   </nav>
   <button class="button js-button">Włącz <span class="button__text">ciemny</span> motyw</button>
   <h1 class="title">Ryszard Froń</h1>
@@ -61,7 +63,8 @@
       <li class="article__listItem">paralotniarstwo.</li>
     </ul>
     <p class="article__paragraph">
-      Okazuje się, że pojawiło sie nowe zainteresowanie i nowa przygoda w postaci nabycia umiejętności we Frontendzie. Jak to wyjdzie - <span class="article__span">ZOBACZYMY, czas pokaże</span>.
+      Okazuje się, że pojawiło sie nowe zainteresowanie i nowa przygoda w postaci nabycia umiejętności we Frontendzie.
+      Jak to wyjdzie - <span class="article__span">ZOBACZYMY, czas pokaże</span>.
     </p>
   </article>
   <section class="section">
@@ -72,7 +75,10 @@
       potrafią się do nich dostosować. I pomimo szerokiej wiedzy o ich funkcjonowaniu potrafią
       zaskoczyć najbardziej doświadczonych pszczelarzy.
     </p>
-   <img class="section__image" src="images/pasiekaJ16.jpg" alt="Moja pasieka"></a>
+    <div class="section__image">
+      <img class="section__image--scene" src="images/pasiekaJ16.jpg" alt="Moja pasieka"></a>
+      <img class="section__image--scene" src="images/maja.png" alt="Mem o Maji"></a>
+    </div>
     <div class="tableContainer">
       <h4 class="tableContainer__title">Pszczoły miodne hodowane w Polsce</h4>
       <table class="table">
@@ -122,11 +128,13 @@
       większy plecak pozwala <span class="section__span"> realizować marzenie o lataniu.</span>
     </p>
     <p class="section__paragraph section__paragraph--italic">
-      Gdy już posmakowałeś lotu, zawsze będziesz chodzić po ziemi z oczami utkwionymi w niebo, bo tam właśnie byłeś i tam zawsze będziesz pragnął powrócić (Leonardo da Vinci).
+      Gdy już posmakowałeś lotu, zawsze będziesz chodzić po ziemi z oczami utkwionymi w niebo, bo tam właśnie byłeś i
+      tam zawsze będziesz pragnął powrócić (Leonardo da Vinci).
     </p>
     <p class="section__paragraph">
       Jeden z filmików
-      <a class="section__link" rel="noreferrer noopener" target="_blank" href="https://www.youtube.com/watch?v=Y-nmfa9Yyyo" title="#00 OLUDENIZ - Migawki 6-13.05.2019">
+      <a class="section__link" rel="noreferrer noopener" target="_blank"
+        href="https://www.youtube.com/watch?v=Y-nmfa9Yyyo" title="#00 OLUDENIZ - Migawki 6-13.05.2019">
         o mojej przygodzie z paralotniarstwem (otwiera się w nowej karcie)</a>
     </P>
     <p class="section__paragraph">
