added transformation and transition for main images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
   <button class="button js-button">Włącz <span class="button__text">ciemny</span> motyw</button>
   <h1 class="title">Ryszard Froń</h1>
-  <img class="main__image" src="images/ryszardFron.jpg" alt="Zdjęcie - Ryszard Froń"></a>
+  <div class="image"></div>
   <article class="article">
     <h2 id="aboutMe" class="article__heading">OGÓLNIE O MNIE</h2>
     <p class="article__paragraph">
