--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
   <div class="contact">
     <h2 id="contact" class="contact__heading">KONTAKT</h2>
     <p>
-      <a class="contact__link" href="mailto:Ryszard.Fron1973@gmail.com">Ryszard.Fron1973@gmail.com</a>
+      <a class="contact__link" href="mailto:Ryszard.Fron1973@gmail.com">Ryszard.Fron@xxxx.xx</a>
     </p>
     <p>
-      <a class="contact__link" href="tel:+48.608040944">tel. 608 040 944</a>
+      <a class="contact__link" href="tel:+48.000 000 000">tel. 000 000 000</a>
     </p>
   </div>
   <footer class="footer">Wszelkie prawa zastrzeżone</footer>
