font change to Monteserrat

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <script defer src="js/script.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="body">
@@ -40,16 +42,8 @@
   <article class="article">
     <h2 id="aboutMe" class="article__heading">OGÓLNIE O MNIE</h2>
     <p class="article__paragraph">
-      Jestem specjalistą z zakresu kontroli i audytu. Moje doświadcznie zdobyłem przez 20 lat pracy w
-      administracji państwowej. Ceniąc sobie rozwój osobisty, chęć poznawania i uczenia się, postanowiłem
-      dokonać
-      życiowej zmiany i zapoznać się z wiedzą z zakresu Frontend Developer. Stanowi to ciekawy wstęp do
-      dalszego rozwoju zawodowego.
-    </p>
-    <hr>
-    <p class="article__paragraph">
-      W życiu poza pracą należy mieć <span class="article__span">zainteresowania</span>, co
-      bezsprzecznie wiąże się z czasem na ich realizację.
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ex aliquam itaque, consequuntur incidunt quos hic
+      dolor delectus repellat tenetur, ipsa eius quia excepturi veritatis a est labore eaque odio.
     </p>
   </article>
   <article class="article">
