refactoring index.html

--- a/index.html
+++ b/index.html
@@ -48,30 +48,37 @@
 
 
   <article class="article">
-    <h1 id="aboutMe" class="intro__articleHeading">Ryszard Froń</h1>
-    <img class="intro__image" src="images/ryszardfron.jpg" alt="ryszard Froń"></a>
-    <p class="intro__articleParagraph">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ex aliquam itaque, consequuntur incidunt quos
-      hic
-      dolor delectus repellat tenetur, ipsa eius quia excepturi veritatis a est labore eaque odio.
+    <h1 id="aboutMe" class="article__heading"></h1>
+    <img class="article__image" src="images/ryszardfron.jpg" alt="ryszard Froń"></a>
+    <p class="article__paragraph">
+      Nazywam się Ryszard Froń Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ex aliquam itaque,
+      consequuntur incidunt quos
+      hic dolor delectus repellat tenetur, ipsa eius quia excepturi veritatis a est labore eaque odio. Lorem ipsum dolor sit
+      amet consectetur, adipisicing elit. Labore laudantium in nisi tempore dolores distinctio, blanditiis quibusdam
+      corrupti id facilis eligendi ipsam recusandae dolorum. Temporibus maiores natus provident reprehenderit animi.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quo nisi quis, quibusdam dolores recusandae
+      commodi labore. Eveniet veniam numquam blanditiis ut consectetur? Perferendis quia quasi nisi facere fugiat
+      deserunt? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, non! Libero dolor consequuntur
+      perspiciatis ea accusantium ut deleniti, aspernatur odio hic magni labore eos sed corrupti aut, quam voluptatum
+      recusandae?
     </p>
   </article>
 
-  <article class="article">
-    <h2 id="interested" class="article__heading">KRÓTKO O ZAINTERESOWANIACH</h2>
-    <p class="article__paragraph">
+  <section class="section">
+    <h2 id="interested" class="section__header">KRÓTKO O ZAINTERESOWANIACH</h2>
+    <p class="section__paragraph">
       Pomimo wielu różnych zainteresowaniach na przestrzeni minionych lat, obecnie skupiony
       jestem na dwóch dostarczających pozytywnych emocji w życiu:
     </p>
-    <ul class="article__list">
-      <li class="article__listItem">pszczelarstwo,</li>
-      <li class="article__listItem">paralotniarstwo.</li>
+    <ul class="section__list">
+      <li class="section__listItem">pszczelarstwo,</li>
+      <li class="section__listItem">paralotniarstwo.</li>
     </ul>
-    <p class="article__paragraph">
+    <p class="section__paragraph">
       Okazuje się, że pojawiło sie nowe zainteresowanie i nowa przygoda w postaci nabycia umiejętności we Frontendzie.
-      Jak to wyjdzie - <span class="article__span">ZOBACZYMY, czas pokaże</span>.
+      Jak to wyjdzie - <strong>ZOBACZYMY, czas pokaże</strong>.
     </p>
-  </article>
+  </section>
 
   <section class="section">
     <h3 id="bee" class="section__header">PSZCZELARSTWO</h3>
