--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <article class="article">
     <h1 id="aboutMe" class="article__heading"></h1>
-    <img class="article__image" src="images/ryszardfron.jpg" alt="ryszard Froń"></a>
+    <img class="article__image" src="images/ryszardFron.jpg" alt="Ryszard Froń"></a>
     <p class="article__paragraph">
       Nazywam się Ryszard Froń Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ex aliquam itaque,
       consequuntur incidunt quos
