--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
   <nav class="navigation">
     <a class="navigation__link" href="#aboutMe">O mnie</a>
+    <a class="navigation__link" href="#skills">Umiejętności</a>
+    <a class="navigation__link" href="#project">Projekty</a>
     <a class="navigation__link" href="#interested">Zainteresowania</a>
-    <a class="navigation__link" href="#bee">Pszczelarstwo</a>
-    <a class="navigation__link" href="#paragliding">Paralotniarstwo</a>
     <a class="navigation__link" href="#contact">Kontakt</a>
   </nav>
 
@@ -53,7 +53,8 @@
     <p class="article__paragraph">
       Nazywam się Ryszard Froń Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ex aliquam itaque,
       consequuntur incidunt quos
-      hic dolor delectus repellat tenetur, ipsa eius quia excepturi veritatis a est labore eaque odio. Lorem ipsum dolor sit
+      hic dolor delectus repellat tenetur, ipsa eius quia excepturi veritatis a est labore eaque odio. Lorem ipsum dolor
+      sit
       amet consectetur, adipisicing elit. Labore laudantium in nisi tempore dolores distinctio, blanditiis quibusdam
       corrupti id facilis eligendi ipsam recusandae dolorum. Temporibus maiores natus provident reprehenderit animi.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quo nisi quis, quibusdam dolores recusandae
@@ -65,7 +66,45 @@
   </article>
 
   <section class="section">
-    <h2 id="interested" class="section__header">KRÓTKO O ZAINTERESOWANIACH</h2>
+    <h2 id="skills" class="section__header">UMIEJĘTNOŚCI</h2>
+    <p class="section__paragraph">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sequi dicta quod iure placeat eius magni fuga
+      praesentium optio voluptatum, ea quibusdam quos distinctio id dolor voluptatibus cum sed ducimus.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatem aliquam minima rerum porro, dolorum
+      assumenda nobis, facilis sunt libero sit sequi in numquam accusantium quaerat fuga eius. Maxime, atque?
+    </p>
+  </section>
+
+  <section class="section">
+    <h2 id="project" class="section__header">PROJEKTY</h2>
+    <p class="section__paragraph">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, rem commodi! Dicta quis sapiente hic, mollitia
+      provident sunt et, aspernatur illo odio voluptatibus recusandae vero laboriosam fugiat, doloremque ratione alias!
+    </p>
+  </section>
+
+  <section class="section">
+    <h2 id="interested" class="section__header">ZAINTERESOWANIA</h2>
+    <p class="section__paragraph">
+      Pasja od 5 lat, potężnie wciągająca. Jest to najtańsza i emocjonująca forma
+      latania. Cały sprzęt spakowany w
+      większy plecak pozwala <span class="section__span"> realizować marzenie o lataniu.</span>
+    </p>
+
+    <p class="section__paragraph section__paragraph--italic">
+      Gdy już posmakowałeś lotu, zawsze będziesz chodzić po ziemi z oczami utkwionymi w niebo, bo tam właśnie byłeś i
+      tam zawsze będziesz pragnął powrócić (Leonardo da Vinci).
+    </p>
+    <p class="section__paragraph">
+      Jeden z filmików
+      <a class="section__link" rel="noreferrer noopener" target="_blank"
+        href="https://www.youtube.com/watch?v=Y-nmfa9Yyyo" title="#00 OLUDENIZ - Migawki 6-13.05.2019">
+        o mojej przygodzie z paralotniarstwem (otwiera się w nowej karcie)</a>
+    </P>
+    <p class="section__paragraph">
+      <a class="section__download" href="images/ewolucjaPara.jpg" download>Ewolucja
+        paralotniarza</a>😎
+    </p>
     <p class="section__paragraph">
       Pomimo wielu różnych zainteresowaniach na przestrzeni minionych lat, obecnie skupiony
       jestem na dwóch dostarczających pozytywnych emocji w życiu:
@@ -75,23 +114,11 @@
       <li class="section__listItem">paralotniarstwo.</li>
     </ul>
     <p class="section__paragraph">
-      Okazuje się, że pojawiło sie nowe zainteresowanie i nowa przygoda w postaci nabycia umiejętności we Frontendzie.
-      Jak to wyjdzie - <strong>ZOBACZYMY, czas pokaże</strong>.
-    </p>
-  </section>
-
-  <section class="section">
-    <h3 id="bee" class="section__header">PSZCZELARSTWO</h3>
-    <p class="section__paragraph">
       Od trzech lat zajmuję sie pszczelarstwem.
       Pszczoły są bardzo wdzięcznym obiektem hodowlanym, gdyż zawsze w zmieniających warunkach klimatycznych
       potrafią się do nich dostosować. I pomimo szerokiej wiedzy o ich funkcjonowaniu potrafią
       zaskoczyć najbardziej doświadczonych pszczelarzy.
     </p>
-    <div class="section__image">
-      <img class="section__image--scene" src="images/pasiekaJ16.jpg" alt="Moja pasieka"></a>
-      <img class="section__image--scene" src="images/maja.png" alt="Mem o Maji"></a>
-    </div>
     <div class="tableContainer">
       <h4 class="tableContainer__title">Pszczoły miodne hodowane w Polsce</h4>
       <table class="table">
@@ -132,28 +159,12 @@
         </tr>
       </table>
     </div>
-  </section>
 
-  <section class="section">
-    <h3 id="paragliding" class="section__header">PARALOTNIARSTWO</h3>
+
+
     <p class="section__paragraph">
-      Pasja od 5 lat, potężnie wciągająca. Jest to najtańsza i emocjonująca forma
-      latania. Cały sprzęt spakowany w
-      większy plecak pozwala <span class="section__span"> realizować marzenie o lataniu.</span>
-    </p>
-    <p class="section__paragraph section__paragraph--italic">
-      Gdy już posmakowałeś lotu, zawsze będziesz chodzić po ziemi z oczami utkwionymi w niebo, bo tam właśnie byłeś i
-      tam zawsze będziesz pragnął powrócić (Leonardo da Vinci).
-    </p>
-    <p class="section__paragraph">
-      Jeden z filmików
-      <a class="section__link" rel="noreferrer noopener" target="_blank"
-        href="https://www.youtube.com/watch?v=Y-nmfa9Yyyo" title="#00 OLUDENIZ - Migawki 6-13.05.2019">
-        o mojej przygodzie z paralotniarstwem (otwiera się w nowej karcie)</a>
-    </P>
-    <p class="section__paragraph">
-      <a class="section__download" href="images/ewolucjaPara.jpg" download>Ewolucja
-        paralotniarza</a>😎
+      Okazuje się, że pojawiło sie nowe zainteresowanie i nowa przygoda w postaci nabycia umiejętności we Frontendzie.
+      Jak to wyjdzie - <strong>ZOBACZYMY, czas pokaże</strong>.
     </p>
   </section>
 
