--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
       praesentium optio voluptatum, ea quibusdam quos distinctio id dolor voluptatibus cum sed ducimus.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatem aliquam minima rerum porro, dolorum
       assumenda nobis, facilis sunt libero sit sequi in numquam accusantium quaerat fuga eius. Maxime, atque?
+    <p class="section__paragraph">Project is created with:
+    <ul class="section__list">
+      <li class="section__listItem">HTML6</li>
+      <li class="section__listItem">CSS</li>
+      <li class="section__listItem">BEM</li>
+      <li class="section__listItem">JavaScript</li>
+      <li class="section__listItem">ECMAScript</li>
+      <li class="section__listItem">...</li>
+    </ul>
+    </p>
     </p>
   </section>
 
@@ -81,6 +91,12 @@
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, rem commodi! Dicta quis sapiente hic, mollitia
       provident sunt et, aspernatur illo odio voluptatibus recusandae vero laboriosam fugiat, doloremque ratione alias!
     </p>
+    <div class="section__element">
+      <p>PROJEKT 1</p>
+      <p>PROJEKT 2</p>
+      <p>PROJEKT 3</p>
+      <p>PROJEKT 4</p>
+    </div>
   </section>
 
   <section class="section">
