added elements to section

--- a/index.html
+++ b/index.html
@@ -92,10 +92,15 @@
       provident sunt et, aspernatur illo odio voluptatibus recusandae vero laboriosam fugiat, doloremque ratione alias!
     </p>
     <div class="section__element">
-      <p>PROJEKT 1</p>
-      <p>PROJEKT 2</p>
-      <p>PROJEKT 3</p>
-      <p>PROJEKT 4</p>
+      <p class="section__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum unde sapiente
+        voluptates omnis consectetur ullam deleniti numquam, ipsum dolorum ipsa tenetur officia quas quia, debitis
+        placeat pariatur quisquam ut!</p>
+      <p class="section__item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum distinctio tenetur non,
+        laborum laudantium quam eligendi recusandae in dolores numquam vero nemo consectetur deserunt provident alias
+        pariatur maxime eaque animi.</p>
+      <p class="section__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, rem quam vitae harum
+        fugiat vel quas explicabo quasi atque perspiciatis. Repellendus error obcaecati ab totam recusandae optio
+        laborum mollitia fugit.</p>
     </div>
   </section>
 
