--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
     <h1 id="aboutMe" class="article__heading"></h1>
     <img class="article__image" src="images/ryszardFron.jpg" alt="Ryszard Froń"></a>
     <p class="article__paragraph">
-      Nazywam się Ryszard Froń Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ex aliquam itaque,
-      consequuntur incidunt quos
-      hic dolor delectus repellat tenetur, ipsa eius quia excepturi veritatis a est labore eaque odio. Lorem ipsum dolor
-      sit
-      amet consectetur, adipisicing elit. Labore laudantium in nisi tempore dolores distinctio, blanditiis quibusdam
-      corrupti id facilis eligendi ipsam recusandae dolorum. Temporibus maiores natus provident reprehenderit animi.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quo nisi quis, quibusdam dolores recusandae
-      commodi labore. Eveniet veniam numquam blanditiis ut consectetur? Perferendis quia quasi nisi facere fugiat
-      deserunt? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, non! Libero dolor consequuntur
-      perspiciatis ea accusantium ut deleniti, aspernatur odio hic magni labore eos sed corrupti aut, quam voluptatum
-      recusandae?
+      Nazywam się Ryszard Froń i obecnie intensywnie zdobywam umiejętności w zakresie technologii Frontendu, co obejmuje wykorzystanie nowoczesnych narzędzi 
+      i technologii wspierających projektowanie oraz wdrażanie interfejsów użytkownika. Dzięki temu efektywnie współpracuję przy realizacji projektów cyfrowych,
+      szczególnie w kontekście rozwiązań dedykowanych administracji publicznej i sektora publicznego. Umiejętności te pozwalają mi na tworzenie i optymalizację funkcjonalnych
+      interfejsów, zrozumienie potrzeb użytkowników oraz usprawnianie procesów poprzez wdrażanie technologii wspierających zarządzanie informacją.
+      Dodatkowo, moje szerokie doświadczenie zawodowe w obszarze audytu, kontroli wewnętrznej i zarządzania procesami, zdobyte w kluczowych instytucjach 
+      administracji publicznej oraz spółkach sektora publicznego. Moje doświadczenie obejmuje prowadzenie kluczowych projektów kontrolnych, zarządzanie zespołami
+      oraz analizę efektywności procesów w instytucjach o różnorodnym profilu działalności.
+     <br>
+      Atutem jest rozumienie specyfiki funkcjonowania administracji publicznej, co przekłada się na skuteczność w zarządzaniu procesami zgodnymi z przepisami 
+      i wymaganiami sektora publicznego. Moje umiejętności techniczne w połączeniu z szerokim doświadczeniem w kontroli i audycie umożliwiają mi efektywne łączenie 
+      wiedzy z obszaru technologii i administracji.
     </p>
   </article>
 
   <section class="section">
     <h2 id="skills" class="section__header">UMIEJĘTNOŚCI</h2>
     <p class="section__paragraph">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sequi dicta quod iure placeat eius magni fuga
-      praesentium optio voluptatum, ea quibusdam quos distinctio id dolor voluptatibus cum sed ducimus.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatem aliquam minima rerum porro, dolorum
-      assumenda nobis, facilis sunt libero sit sequi in numquam accusantium quaerat fuga eius. Maxime, atque?
-    <p class="section__paragraph">Project is created with:
+      Znajomość technologii poniższych technologii pozwala mi na tworzenie nowoczesnych, responsywnych i estetycznych interfejsów użytkownika,
+      które są kluczowe dla pozytywnego doświadczenia użytkownika. Umiejętność programowania dynamicznych interakcji i stosowania modułowych metodologii (np. BEM) 
+      ułatwia utrzymanie, rozwój i skalowalność aplikacji internetowych. Dzięki temu możliwe jest wdrażanie wydajnych i przyszłościowych rozwiązań technologicznych, 
+      zarówno w projektach komercyjnych, jak i publicznych. 
+    <p class="section__paragraph">Projekty są tworzone za pomocą:
     <ul class="section__list">
       <li class="section__listItem">HTML6</li>
       <li class="section__listItem">CSS</li>
@@ -87,19 +87,12 @@
   <section class="section">
     <h2 id="project" class="section__header">PROJEKTY</h2>
     <p class="section__paragraph">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, rem commodi! Dicta quis sapiente hic, mollitia
-      provident sunt et, aspernatur illo odio voluptatibus recusandae vero laboriosam fugiat, doloremque ratione alias!
+      Dtychczas stworzone projekty z wykorzystaniem wyżej wymieninych technologii
     </p>
     <div class="section__element">
-      <p class="section__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum unde sapiente
-        voluptates omnis consectetur ullam deleniti numquam, ipsum dolorum ipsa tenetur officia quas quia, debitis
-        placeat pariatur quisquam ut!</p>
-      <p class="section__item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum distinctio tenetur non,
-        laborum laudantium quam eligendi recusandae in dolores numquam vero nemo consectetur deserunt provident alias
-        pariatur maxime eaque animi.</p>
-      <p class="section__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, rem quam vitae harum
-        fugiat vel quas explicabo quasi atque perspiciatis. Repellendus error obcaecati ab totam recusandae optio
-        laborum mollitia fugit.</p>
+      <p class="section__item">Projekt 1 <br> Klakulator walut</p>
+      <p class="section__item">Projekt 2 <br> Lista zadań.</p>
+      <p class="section__item">Projekt 3 <br> ....</p>
     </div>
   </section>
 
@@ -108,7 +101,7 @@
     <p class="section__paragraph">
       Pasja od 5 lat, potężnie wciągająca. Jest to najtańsza i emocjonująca forma
       latania. Cały sprzęt spakowany w
-      większy plecak pozwala <span class="section__span"> realizować marzenie o lataniu.</span>
+      większy plecak pozwala  realizować marzenie o lataniu.
     </p>
 
     <p class="section__paragraph section__paragraph--italic">
@@ -133,19 +126,7 @@
       <li class="section__listItem">pszczelarstwo,</li>
       <li class="section__listItem">paralotniarstwo.</li>
     </ul>
-    <p class="section__paragraph">
-      Od trzech lat zajmuję sie pszczelarstwem.
-      Pszczoły są bardzo wdzięcznym obiektem hodowlanym, gdyż zawsze w zmieniających warunkach klimatycznych
-      potrafią się do nich dostosować. I pomimo szerokiej wiedzy o ich funkcjonowaniu potrafią
-      zaskoczyć najbardziej doświadczonych pszczelarzy.
-    </p>
-  
 
-
-
-    <p class="section__paragraph">
-      Okazuje się, że pojawiło sie nowe zainteresowanie i nowa przygoda w postaci nabycia umiejętności we Frontendzie.
-      Jak to wyjdzie - <strong>ZOBACZYMY, czas pokaże</strong>.
     </p>
   </section>
 
