--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ryszard Froń - O mnie</title>
-  <link rel="icon" href="images/J16.png">
+  <link rel="icon" href="images/RichiDev.png">
   <meta property="og:image" content="images/share.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -48,20 +48,21 @@
 
   <article class="article">
     <h1 id="aboutMe" class="article__heading"></h1>
-    <img class="article__image" src="images/ryszardFron.jpg" alt="Ryszard Froń"></a>
-    <p class="article__paragraph">
+    <img class="article__image" src="images/Ryszard_Fron.png" alt="Ryszard Froń"></a>
+    <div class="article__paragraph">
       Nazywam się Ryszard Froń i obecnie intensywnie zdobywam umiejętności w zakresie technologii Frontendu, co obejmuje wykorzystanie nowoczesnych narzędzi 
-      i technologii wspierających projektowanie oraz wdrażanie interfejsów użytkownika. Dzięki temu efektywnie współpracuję przy realizacji projektów cyfrowych,
-      szczególnie w kontekście rozwiązań dedykowanych administracji publicznej i sektora publicznego. Umiejętności te pozwalają mi na tworzenie i optymalizację funkcjonalnych
+      i technologii wspierających projektowanie oraz wdrażanie interfejsów użytkownika, szczególnie w kontekście rozwiązań dedykowanych administracji publicznej 
+      i sektora publicznego. Umiejętności te pozwalają mi na tworzenie i optymalizację funkcjonalnych
       interfejsów, zrozumienie potrzeb użytkowników oraz usprawnianie procesów poprzez wdrażanie technologii wspierających zarządzanie informacją.
-      Dodatkowo, moje szerokie doświadczenie zawodowe w obszarze audytu, kontroli wewnętrznej i zarządzania procesami, zdobyte w kluczowych instytucjach 
+      Dodatkowo, posiadam szerokie doświadczenie zawodowe w obszarze audytu, kontroli wewnętrznej i zarządzania procesami, zdobyte w kluczowych instytucjach 
       administracji publicznej oraz spółkach sektora publicznego. Moje doświadczenie obejmuje prowadzenie kluczowych projektów kontrolnych, zarządzanie zespołami
       oraz analizę efektywności procesów w instytucjach o różnorodnym profilu działalności.
-     <br>
+    </div>
+    <div class="article__paragraph">
       Atutem jest rozumienie specyfiki funkcjonowania administracji publicznej, co przekłada się na skuteczność w zarządzaniu procesami zgodnymi z przepisami 
       i wymaganiami sektora publicznego. Moje umiejętności techniczne w połączeniu z szerokim doświadczeniem w kontroli i audycie umożliwiają mi efektywne łączenie 
       wiedzy z obszaru technologii i administracji.
-    </p>
+    </div>
   </article>
 
   <section class="section">
