--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   <section class="section">
     <h2 id="skills" class="section__header">UMIEJĘTNOŚCI</h2>
     <p class="section__paragraph">
-      Znajomość technologii poniższych technologii pozwala mi na tworzenie nowoczesnych, responsywnych i estetycznych interfejsów użytkownika,
-      które są kluczowe dla pozytywnego doświadczenia użytkownika. Umiejętność programowania dynamicznych interakcji i stosowania modułowych metodologii (np. BEM) 
-      ułatwia utrzymanie, rozwój i skalowalność aplikacji internetowych. Dzięki temu możliwe jest wdrażanie wydajnych i przyszłościowych rozwiązań technologicznych, 
-      zarówno w projektach komercyjnych, jak i publicznych. 
-    <p class="section__paragraph">Projekty są tworzone za pomocą:
+      Znajomość niżej wyminionych technologii pozwala na tworzenie nowoczesnych, responsywnych i estetycznych interfejsów, które są kluczowe dla pozytywnego
+      doświadczenia użytkownika. Umiejętność programowania dynamicznych interakcji i stosowania modułowych metodologii (np. BEM) ułatwia utrzymanie, rozwój 
+      i skalowalność aplikacji internetowych. Dzięki temu możliwe jest wdrażanie wydajnych i przyszłościowych rozwiązań technologicznych, zarówno w projektach komercyjnych,
+     jak i publicznych. 
+    <p class="section__paragraph">Projekty tworzone są za pomocą:
     <ul class="section__list">
       <li class="section__listItem">HTML6</li>
       <li class="section__listItem">CSS</li>
@@ -88,56 +88,52 @@
   <section class="section">
     <h2 id="project" class="section__header">PROJEKTY</h2>
     <p class="section__paragraph">
-      Dtychczas stworzone projekty z wykorzystaniem wyżej wymieninych technologii
+      Dotychczas stworzone projekty z wykorzystaniem wyżej wymieninych technologii
     </p>
     <div class="section__element">
       <p class="section__item">Projekt 1 <br> Klakulator walut</p>
       <p class="section__item">Projekt 2 <br> Lista zadań.</p>
       <p class="section__item">Projekt 3 <br> ....</p>
+      <p class="section__item">Projekt 4 <br> ....</p>
     </div>
   </section>
 
   <section class="section">
     <h2 id="interested" class="section__header">ZAINTERESOWANIA</h2>
     <p class="section__paragraph">
-      Pasja od 5 lat, potężnie wciągająca. Jest to najtańsza i emocjonująca forma
-      latania. Cały sprzęt spakowany w
-      większy plecak pozwala  realizować marzenie o lataniu.
+      Pomimo wielu różnych zainteresowaniach na przestrzeni minionych lat, obecnie skupiony
+      jestem na dwóch dostarczających pozytywnych emocji w życiu:
     </p>
-
+  <ul class="section__list">
+    <li class="section__listItem">pszczelarstwo,</li>
+    <li class="section__listItem">paralotniarstwo.</li>
+  </ul>
+      <p class="section__paragraph">
+      Paralotniarstwoj to emocjonująca forma latania. Cały sprzęt spakowany w plecak pozwala realizować marzenie o lataniu.
+    </p>
     <p class="section__paragraph section__paragraph--italic">
       Gdy już posmakowałeś lotu, zawsze będziesz chodzić po ziemi z oczami utkwionymi w niebo, bo tam właśnie byłeś i
       tam zawsze będziesz pragnął powrócić (Leonardo da Vinci).
     </p>
     <p class="section__paragraph">
-      Jeden z filmików
+      Nagranie z wyjazdu
       <a class="section__link" rel="noreferrer noopener" target="_blank"
         href="https://www.youtube.com/watch?v=Y-nmfa9Yyyo" title="#00 OLUDENIZ - Migawki 6-13.05.2019">
-        o mojej przygodzie z paralotniarstwem (otwiera się w nowej karcie)</a>
+        na latanie (otwiera się w nowej karcie)</a>
     </P>
     <p class="section__paragraph">
       <a class="section__download" href="images/ewolucjaPara.jpg" download>Ewolucja
         paralotniarza</a>😎
-    </p>
-    <p class="section__paragraph">
-      Pomimo wielu różnych zainteresowaniach na przestrzeni minionych lat, obecnie skupiony
-      jestem na dwóch dostarczających pozytywnych emocji w życiu:
-    </p>
-    <ul class="section__list">
-      <li class="section__listItem">pszczelarstwo,</li>
-      <li class="section__listItem">paralotniarstwo.</li>
-    </ul>
-
-    </p>
+   </p>
   </section>
 
   <div class="contact">
     <h2 id="contact" class="contact__heading">KONTAKT</h2>
     <p>
-      <a class="contact__link" href="mailto:Ryszard.Fron1973@gmail.com">Ryszard.Fron@xxxx.xx</a>
+      <a class="contact__link" href="mailto:Ryszard.Fron1973@gmail.com">Ryszard.Fron@op.pl</a>
     </p>
     <p>
-      <a class="contact__link" href="tel:+48.000 000 000">tel. 000 000 000</a>
+      <a class="contact__link" href="tel:+48.000 000 000">tel. 608 040 944</a>
     </p>
   </div>
 
