--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="css/section.css" rel="stylesheet">
   <link href="css/contact.css" rel="stylesheet">
   <link href="css/footer.css" rel="stylesheet">
+  <link href="css/media.css" rel="stylesheet">
   <script defer src="js/script.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,17 +51,24 @@
     <h1 id="aboutMe" class="article__heading"></h1>
     <img class="article__image" src="images/Ryszard_Fron.png" alt="Ryszard Froń"></a>
     <div class="article__paragraph">
-      Nazywam się Ryszard Froń i obecnie intensywnie zdobywam umiejętności w zakresie technologii Frontendu, co obejmuje wykorzystanie nowoczesnych narzędzi 
-      i technologii wspierających projektowanie oraz wdrażanie interfejsów użytkownika, szczególnie w kontekście rozwiązań dedykowanych administracji publicznej 
+      Nazywam się Ryszard Froń i obecnie intensywnie zdobywam umiejętności w zakresie technologii Frontendu, co obejmuje
+      wykorzystanie nowoczesnych narzędzi
+      i technologii wspierających projektowanie oraz wdrażanie interfejsów użytkownika, szczególnie w kontekście
+      rozwiązań dedykowanych administracji publicznej
       i sektora publicznego. Umiejętności te pozwalają mi na tworzenie i optymalizację funkcjonalnych
-      interfejsów, zrozumienie potrzeb użytkowników oraz usprawnianie procesów poprzez wdrażanie technologii wspierających zarządzanie informacją.
-      Dodatkowo, posiadam szerokie doświadczenie zawodowe w obszarze audytu, kontroli wewnętrznej i zarządzania procesami, zdobyte w kluczowych instytucjach 
-      administracji publicznej oraz spółkach sektora publicznego. Moje doświadczenie obejmuje prowadzenie kluczowych projektów kontrolnych, zarządzanie zespołami
+      interfejsów, zrozumienie potrzeb użytkowników oraz usprawnianie procesów poprzez wdrażanie technologii
+      wspierających zarządzanie informacją.
+      Dodatkowo, posiadam szerokie doświadczenie zawodowe w obszarze audytu, kontroli wewnętrznej i zarządzania
+      procesami, zdobyte w kluczowych instytucjach
+      administracji publicznej oraz spółkach sektora publicznego. Moje doświadczenie obejmuje prowadzenie kluczowych
+      projektów kontrolnych, zarządzanie zespołami
       oraz analizę efektywności procesów w instytucjach o różnorodnym profilu działalności.
     </div>
     <div class="article__paragraph">
-      Atutem jest rozumienie specyfiki funkcjonowania administracji publicznej, co przekłada się na skuteczność w zarządzaniu procesami zgodnymi z przepisami 
-      i wymaganiami sektora publicznego. Moje umiejętności techniczne w połączeniu z szerokim doświadczeniem w kontroli i audycie umożliwiają mi efektywne łączenie 
+      Atutem jest rozumienie specyfiki funkcjonowania administracji publicznej, co przekłada się na skuteczność w
+      zarządzaniu procesami zgodnymi z przepisami
+      i wymaganiami sektora publicznego. Moje umiejętności techniczne w połączeniu z szerokim doświadczeniem w kontroli
+      i audycie umożliwiają mi efektywne łączenie
       wiedzy z obszaru technologii i administracji.
     </div>
   </article>
@@ -68,10 +76,13 @@
   <section class="section">
     <h2 id="skills" class="section__header">UMIEJĘTNOŚCI</h2>
     <p class="section__paragraph">
-      Znajomość niżej wyminionych technologii pozwala na tworzenie nowoczesnych, responsywnych i estetycznych interfejsów, które są kluczowe dla pozytywnego
-      doświadczenia użytkownika. Umiejętność programowania dynamicznych interakcji i stosowania modułowych metodologii (np. BEM) ułatwia utrzymanie, rozwój 
-      i skalowalność aplikacji internetowych. Dzięki temu możliwe jest wdrażanie wydajnych i przyszłościowych rozwiązań technologicznych, zarówno w projektach komercyjnych,
-     jak i publicznych. 
+      Znajomość niżej wyminionych technologii pozwala na tworzenie nowoczesnych, responsywnych i estetycznych
+      interfejsów, które są kluczowe dla pozytywnego
+      doświadczenia użytkownika. Umiejętność programowania dynamicznych interakcji i stosowania modułowych metodologii
+      (np. BEM) ułatwia utrzymanie, rozwój
+      i skalowalność aplikacji internetowych. Dzięki temu możliwe jest wdrażanie wydajnych i przyszłościowych rozwiązań
+      technologicznych, zarówno w projektach komercyjnych,
+      jak i publicznych.
     <p class="section__paragraph">Projekty tworzone są za pomocą:
     <ul class="section__list">
       <li class="section__listItem">HTML6</li>
@@ -91,10 +102,18 @@
       Dotychczas stworzone projekty z wykorzystaniem wyżej wymieninych technologii
     </p>
     <div class="section__element">
-      <p class="section__item">Projekt 1 <br> Klakulator walut</p>
-      <p class="section__item">Projekt 2 <br> Lista zadań.</p>
-      <p class="section__item">Projekt 3 <br> ....</p>
-      <p class="section__item">Projekt 4 <br> ....</p>
+      <p class="section__item">Projekt 1 <br> Klakulator walut <br> Lorem ipsum dolor sit amet consectetur, adipisicing
+        elit. Consequatur explicabo alias quaerat. Asperiores quasi tempora odit, corporis aliquam voluptatem, impedit
+        in numquam, magni totam autem? Voluptates expedita ab fugiat in.</p>
+      <p class="section__item">Projekt 2 <br> Lista zadań <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        A eveniet culpa molestiae cupiditate eligendi natus dolore? Magnam adipisci dolorum temporibus, quia vitae
+        obcaecati maxime nobis eaque! Sapiente ullam sint ad.</p>
+      <p class="section__item">Projekt 3 <br> .... <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum
+        numquam sint veniam, sequi earum hic saepe vero eaque, quidem fuga corporis repellat velit iure error? Error
+        voluptatum consequuntur laudantium enim!</p>
+      <p class="section__item">Projekt 4 <br> .... <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+        enim ab iusto commodi id cum doloremque dicta. Quod a, maiores repellat rem maxime cupiditate libero delectus
+        nostrum? Facere, tempora error.</p>
     </div>
   </section>
 
@@ -104,12 +123,13 @@
       Pomimo wielu różnych zainteresowaniach na przestrzeni minionych lat, obecnie skupiony
       jestem na dwóch dostarczających pozytywnych emocji w życiu:
     </p>
-  <ul class="section__list">
-    <li class="section__listItem">pszczelarstwo,</li>
-    <li class="section__listItem">paralotniarstwo.</li>
-  </ul>
-      <p class="section__paragraph">
-      Paralotniarstwoj to emocjonująca forma latania. Cały sprzęt spakowany w plecak pozwala realizować marzenie o lataniu.
+    <ul class="section__list">
+      <li class="section__listItem">pszczelarstwo,</li>
+      <li class="section__listItem">paralotniarstwo.</li>
+    </ul>
+    <p class="section__paragraph">
+      Paralotniarstwoj to emocjonująca forma latania. Cały sprzęt spakowany w plecak pozwala realizować marzenie o
+      lataniu.
     </p>
     <p class="section__paragraph section__paragraph--italic">
       Gdy już posmakowałeś lotu, zawsze będziesz chodzić po ziemi z oczami utkwionymi w niebo, bo tam właśnie byłeś i
@@ -124,16 +144,16 @@
     <p class="section__paragraph">
       <a class="section__download" href="images/ewolucjaPara.jpg" download>Ewolucja
         paralotniarza</a>😎
-   </p>
+    </p>
   </section>
 
   <div class="contact">
     <h2 id="contact" class="contact__heading">KONTAKT</h2>
     <p>
-      <a class="contact__link" href="mailto:Ryszard.Fron1973@gmail.com">Ryszard.Fron@op.pl</a>
+      <a class="contact__link" href="mailto:Ryszard.Fron@op.pl">Ryszard.Fron@op.pl</a>
     </p>
     <p>
-      <a class="contact__link" href="tel:+48.000 000 000">tel. 608 040 944</a>
+      <a class="contact__link" href="tel:+48.000 000 000">tel. +48 608 040 944</a>
     </p>
   </div>
 
