changed to project links

--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
       <li class="section__listItem">ECMAScript</li>
       <li class="section__listItem">...</li>
     </ul>
-    </p>
-    </p>
   </section>
 
   <section class="section">
@@ -102,18 +100,30 @@
       Dotychczas stworzone projekty z wykorzystaniem wyżej wymieninych technologii
     </p>
     <div class="section__element">
-      <p class="section__item">Projekt 1 <br> Klakulator walut <br> Lorem ipsum dolor sit amet consectetur, adipisicing
-        elit. Consequatur explicabo alias quaerat. Asperiores quasi tempora odit, corporis aliquam voluptatem, impedit
-        in numquam, magni totam autem? Voluptates expedita ab fugiat in.</p>
-      <p class="section__item">Projekt 2 <br> Lista zadań <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        A eveniet culpa molestiae cupiditate eligendi natus dolore? Magnam adipisci dolorum temporibus, quia vitae
-        obcaecati maxime nobis eaque! Sapiente ullam sint ad.</p>
-      <p class="section__item">Projekt 3 <br> .... <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum
-        numquam sint veniam, sequi earum hic saepe vero eaque, quidem fuga corporis repellat velit iure error? Error
-        voluptatum consequuntur laudantium enim!</p>
-      <p class="section__item">Projekt 4 <br> .... <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-        enim ab iusto commodi id cum doloremque dicta. Quod a, maiores repellat rem maxime cupiditate libero delectus
-        nostrum? Facere, tempora error.</p>
+      <p class="section__item">
+        <a class="section__itemLink" rel="noreferrer noopener" target="_blank"
+        href="https://ryszardfron.github.io/currency-converter/" 
+        title="Prosty kalkulator walut">Projekt 1<br>
+        <span class="section__itemLink--title">Prosty Kalkulator Walut</span></a>
+      </p>
+      <p class="section__item">
+        <a class="section__itemLink" rel="noreferrer noopener" target="_blank"
+        href="https://ryszardfron.github.io/task_list/" 
+        title="Lista zadań">Projekt 2<br>
+        <span class="section__itemLink--title">Lista zadań</span></a>
+      </p>
+      <p class="section__item">
+        <a class="section__itemLink" rel="noreferrer noopener" target="_blank"
+        href="https://ryszardfron.github.io/task-list-react/" 
+        title="Lisa zadań w React">Projekt 3<br>
+        <span class="section__itemLink--title">Lista zadań w REACT</span></a>
+      </p>
+      <p class="section__item">
+        <a class="section__itemLink" rel="noreferrer noopener" target="_blank"
+        href="https:///" 
+        title=".....">Projekt 4<br>
+        <span class="section__itemLink--title">.............</span></a>
+      </p>
     </div>
   </section>
 
