--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <span class="header__textName">Ryszard Froń</span>
     </div>
     <div class="button">
-      <button class="button__button js-button">Włącz <span class="button__text"> ciemny </span> motyw</button>
+      <button class="button__button">Włącz <span class="button__text"> ciemny </span> motyw</button>
     </div>
   </header>
 
